# aioppgave

./: .gitignore  LICENSE  README.md  aioppgave.py  database.py  main.py  pyproject.toml  vlc_checker.py
