[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlc-checker"
version = "1.0.0"
description = "VLC Media Player update checker with SQLite tracking"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Kunst og Arkitektur AS"}]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
]

[project.scripts]
vlc-checker = "main:main"

[tool.setuptools]
packages = ["vlc_checker"]
